Index finalizado, procedo a musica

--- a/style.css
+++ b/style.css
@@ -52,10 +52,13 @@ a:link{
 .hootsman{
     background-color: #932F6D;
 }
+.proletius{
+    background-color: #8d5a12;
+}
+.zargothrax{
+    background-color: #491111;
+}
 .padding{
     padding: 30px;
 }
-/* .imagen_footer{
-    width="300";
-     height="80"
-} */
+
